k8s/backend.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 5000
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - image: registry.gitlab.com/cachednerds/government_up_yet:backend
        imagePullPolicy: Always
        name: backend
        ports:
        - name: http
          containerPort: 5000
