k8s/ingress.yml
# The main ingress,

# /api traffic goes to the backend
# everything else is frontend

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
      - http:
          paths:
          - path: /api
            backend:
              serviceName: backend
              servicePort: 80
      - http:
          paths:
          - path: /
            backend:
              serviceName: frontend
              servicePort: 80
